# pagetop-hljs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
example/: Cargo.toml
example/src/: main.rs
src/: component.rs  config.rs  context.rs  lang.rs  lib.rs  snippet.rs  theme.rs
src/locale/en-US/: module.ftl
src/locale/es-ES/: module.ftl
