[package]
name = "pagetop-hljs"
version = "0.0.5"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop that displays beautiful code snippets on web pages using the highlight.js \
    JavaScript library.
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop-hljs"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../PageTop/pagetop" }
static-files = "0.2.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pagetop-build = { version = "0.0", path = "../PageTop/pagetop-build" }
