[package]
name = "pagetop-hljs"
version = "0.0.14"
edition = "2021"

description = "PageTop package to display beautiful code snippets on web pages."
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop-hljs"
license = "Apache-2.0 OR MIT"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
categories = [
    "web-programming", "gui"
]
keywords = [
    "pagetop", "highlight", "parse", "parsing", "component"
]

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop/helpers/pagetop-build" }
